[package]
name = "rlua_libs"
description = "Extension modules for rlua"
authors = ["Yakiyo <yakiyo1206@gmail.com>"]
repository = "http://github.com/Yakiyo/rlua-libs"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.20", optional = true }
reqwest = { version = "0.11.22", features = ["blocking"], optional = true }
rlua = "0.19.7"

[features]
default = ["http", "filepath", "log"]
http = ["dep:reqwest"]
filepath = []
log = ["dep:env_logger", "dep:log"]
